--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 
 <body>
-    <h1>Click below to view day 23 tasks</h1>
+    <h1>CLICK BELOW TO VIEW DAY 23 TASKS</h1>
     <a href="./gridlayout.html" target="_blank">Task 1</a>
     <a href="./Gridimg.html" target="_blank">Task 2</a>
     <a href="./gridtemplate.html" target="_blank">Task 3</a>
