--- a/gridtemplate.html
+++ b/gridtemplate.html
@@ -8,13 +8,13 @@
     <style>
         div.boss {
             background-color: rgb(244, 240, 236);
-            width: 1900px; height: 100%;
+            width: 100%; height: 4350px;
         }
 
         div.left {
             background-color: white;
             width: 270px;
-            height: 700px;
+            height: 4350px;
             margin-left: 10px;
             margin-top: 0px;
             position: relative;
@@ -146,14 +146,14 @@
 
 
         ul.num {
-            background-color: rgb(244, 240, 236);
+            /* background-color: rgb(244, 240, 236); */
             list-style: none;
             width: 1150px;
             margin-left: 280px;
         }
 
         ul.num li {
-            background-color: rgb(244, 240, 236);
+            /* background-color: rgb(244, 240, 236); */
             display: inline-block;
             padding: 10px;
             position: relative;
@@ -272,7 +272,7 @@
         }
 
         div.contact {
-            background-color: rgb(244, 240, 236);
+            /* background-color: rgb(244, 240, 236); */
             width: 1210px;
             height: 530px;
             position: relative;
