--- a/gridtemplate.html
+++ b/gridtemplate.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid-Template</title>
     <style>
-        div.boss {
+        body{
+            background-color: rgb(244, 240, 236);
+
+        }
+        /* div.boss {
             background-color: rgb(244, 240, 236);
             width: 100%; height: 4350px;
-        }
+        } */
 
         div.left {
             background-color: white;
@@ -146,14 +150,14 @@
 
 
         ul.num {
-            /* background-color: rgb(244, 240, 236); */
+            background-color: rgb(244, 240, 236);
             list-style: none;
             width: 1150px;
             margin-left: 280px;
         }
 
         ul.num li {
-            /* background-color: rgb(244, 240, 236); */
+            background-color: rgb(244, 240, 236);
             display: inline-block;
             padding: 10px;
             position: relative;
@@ -272,7 +276,7 @@
         }
 
         div.contact {
-            /* background-color: rgb(244, 240, 236); */
+            background-color: rgb(244, 240, 236);
             width: 1210px;
             height: 530px;
             position: relative;
@@ -402,7 +406,7 @@
 </head>
 
 <body>
-    <div class="boss">
+    <!-- <div class="boss"> -->
         <div class="left">
             <p class="top">SHIVA <br>CHAITHANYA</p>
             <p class="hover">PORTFOLIO</p>
@@ -623,7 +627,7 @@
             </div>
         </footer>
         <p class="bot">Powered by Shiva Chaithanya</p>
-    </div>
+    <!-- </div> -->
 </body>
 
 </html>
